fix: tool feedback + block selection + directory creation + theme
- Tool buttons: active tool highlighted with dark background
- SELECT/GRAB: clicking a block sets it as activeBlockState
- PLACE: uses activeBlockState (or STONE as fallback)
- REPLACE: uses activeBlockState (or GLASS as fallback)
- Status bar shows active tool name + material name
- Schematic dir created on FMLLoadCompleteEvent (after config loaded)
- Theme stylesheet applied from config on editor open
- Custom dropdown menu (no flash, toggle on re-click, active button state)
- All 54 tests passing